force-app/main/default/objects/Entity_Relationship__c/Entity_Relationship__c.object-meta.xml
<CustomObject>
    <description>Junction object to allow many-to-many relation between Clients and Entity (US-1388).</description>
    <label>Entity Relationship</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Related Clients and Entity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entity Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>