force-app/main/default/objects/Entity_Relationship__c/fields/client_client_coordinator__c.field-meta.xml
<CustomField>
    <fullName>client_client_coordinator__c</fullName>
    <description>Client Coordinator of the related client (US-1383).</description>
    <formula>CommB_Client__r.Owner.FirstName + &apos; &apos; + CommB_Client__r.Owner.LastName</formula>
    <inlineHelpText>Client Coordinator of the related client.</inlineHelpText>
    <label>Client Coordinator</label>
    <type>Text</type>
</CustomField>