force-app/main/default/objects/Entity_Relationship__c/fields/client_client_coordinator_email__c.field-meta.xml
<CustomField>
    <fullName>client_client_coordinator_email__c</fullName>
    <description>Email of the related client&apos;s Client Coordinator (US-1383).</description>
    <formula>CommB_Client__r.Owner.Email</formula>
    <inlineHelpText>Email of the related client&apos;s Client Coordinator.</inlineHelpText>
    <label>Client Coordinator Email</label>
    <type>Text</type>
</CustomField>