force-app/main/default/objects/Entity_Relationship__c/fields/client_parent_client__c.field-meta.xml
<CustomField>
    <fullName>client_parent_client__c</fullName>
    <description>Parent of the related client (US-1383).</description>
    <formula>CommB_Client__r.Parent.Name</formula>
    <inlineHelpText>Parent of the related client.</inlineHelpText>
    <label>Parent Client</label>
    <type>Text</type>
</CustomField>