force-app/main/default/objects/Entity_Relationship__c/fields/client_record_type__c.field-meta.xml
<CustomField>
    <fullName>client_record_type__c</fullName>
    <description>Record type of the related client (US-1383).</description>
    <formula>CommB_Client__r.RecordType.Name</formula>
    <inlineHelpText>Record type of the related client.</inlineHelpText>
    <label>Client Record Type</label>
    <type>Text</type>
</CustomField>