force-app/main/default/objects/Entity_Relationship__c/fields/CommB_Client__c.field-meta.xml
<CustomField>
    <fullName>CommB_Client__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>CommB clients that this PBB ROA client has been associated to(US-1388).</description>
    <inlineHelpText>CommB clients that this PBB ROA client has been associated to.</inlineHelpText>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Commercial Banking Client</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PBB ROA Related Entity</relationshipLabel>
    <relationshipName>Related_Clients_and_Entities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>