force-app/main/default/objects/Entity_Relationship__c/fields/PBB_ROA_Entity__c.field-meta.xml
<CustomField>
    <fullName>PBB_ROA_Entity__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <description>PBB ROA Entity to which CommB clients records are associated(1388).</description>
    <inlineHelpText>PBB ROA Entity to which CommB clients records are associated.</inlineHelpText>
    <label>PBB ROA Entity</label>
    <referenceTo>PBB_ROA_Entity__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Related_Clients_and_Entities</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>