force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_customer_number__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_customer_number__c</fullName>
    <description>Customer Number of the related PBB ROA Entity (US-1383).</description>
    <formula>PBB_ROA_Entity__r.ROA_Customer_Number__c</formula>
    <inlineHelpText>Customer Number of the related PBB ROA Entity.</inlineHelpText>
    <label>ROA Customer Number</label>
    <type>Text</type>
</CustomField>