force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_parent__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_parent__c</fullName>
    <description>Parent of the related PBB ROA Entity (US-1383).</description>
    <formula>PBB_ROA_Entity__r.Parent__c</formula>
    <inlineHelpText>Parent of the related PBB ROA Entity.</inlineHelpText>
    <label>Parent PBB ROA Entity</label>
    <type>Text</type>
</CustomField>