force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_record_type__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_record_type__c</fullName>
    <description>Record type of the related PBB ROA Entity (US-1383).</description>
    <formula>PBB_ROA_Entity__r.RecordType.Name</formula>
    <inlineHelpText>Record type of the related PBB ROA Entity.</inlineHelpText>
    <label>PBB ROA Record Type</label>
    <type>Text</type>
</CustomField>