force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_rel_manager_email__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_rel_manager_email__c</fullName>
    <description>Relationship Manager&apos;s Email of the related PBB ROA Entity (US-1383).</description>
    <formula>PBB_ROA_Entity__r.Email_RM__c</formula>
    <inlineHelpText>Relationship Manager&apos;s Email of the related PBB ROA Entity.</inlineHelpText>
    <label>Relationship Manager Email</label>
    <type>Text</type>
</CustomField>