force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_relationship_manager__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_relationship_manager__c</fullName>
    <description>Relationship Manager of the related PBB ROA Entity (US-1383).</description>
    <formula>PBB_ROA_Entity__r.Relationship_Manager__c</formula>
    <inlineHelpText>Relationship Manager of the related PBB ROA Entity.</inlineHelpText>
    <label>Relationship Manager</label>
    <type>Text</type>
</CustomField>