force-app/main/default/objects/Entity_Relationship__c/fields/pbb_roa_entity_status__c.field-meta.xml
<CustomField>
    <fullName>pbb_roa_entity_status__c</fullName>
    <description>Status of the related PBB ROA Entity (US-1383).</description>
    <formula>TEXT(PBB_ROA_Entity__r.Status__c)</formula>
    <inlineHelpText>Status of the related PBB ROA Entity.</inlineHelpText>
    <label>PBB ROA Entity Status</label>
    <type>Text</type>
</CustomField>